; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_oxygen_mixer.c_write_spdif_bits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_oxygen_mixer.c_write_spdif_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oxygen = type { i32 }

@OXYGEN_SPDIF_OUTPUT_BITS = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_NONAUDIO = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_C = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_PREEMPHASIS = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_CATEGORY_MASK = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_ORIGINAL = common dso_local global i32 0, align 4
@OXYGEN_SPDIF_V = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oxygen*, i32)* @write_spdif_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_spdif_bits(%struct.oxygen* %0, i32 %1) #0 {
  %3 = alloca %struct.oxygen*, align 8
  %4 = alloca i32, align 4
  store %struct.oxygen* %0, %struct.oxygen** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.oxygen*, %struct.oxygen** %3, align 8
  %6 = load i32, i32* @OXYGEN_SPDIF_OUTPUT_BITS, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @OXYGEN_SPDIF_NONAUDIO, align 4
  %9 = load i32, i32* @OXYGEN_SPDIF_C, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @OXYGEN_SPDIF_PREEMPHASIS, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @OXYGEN_SPDIF_CATEGORY_MASK, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @OXYGEN_SPDIF_ORIGINAL, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @OXYGEN_SPDIF_V, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @oxygen_write32_masked(%struct.oxygen* %5, i32 %6, i32 %7, i32 %18)
  ret void
}

declare dso_local i32 @oxygen_write32_masked(%struct.oxygen*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
